db/mongodb/mongo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: develop
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: 172.203.105.248  # Reemplaza <IP_PÚBLICA> con tu IP pública del Ingress Controller
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo
            port:
              number: 27017
